added ultilities function
